app/assets/stylesheets/bootstrap_and_overrides.css.less
@import "twitter/bootstrap/bootstrap";
@import "twitter/bootstrap/responsive";

// Set the correct sprite paths
@iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
@iconWhiteSpritePath: image-url("twitter/bootstrap/glyphicons-halflings-white.png");

// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
@fontAwesomeEotPath: asset-url("fontawesome-webfont.eot");
@fontAwesomeEotPath_iefix: asset-url("fontawesome-webfont.eot?#iefix");
@fontAwesomeWoffPath: asset-url("fontawesome-webfont.woff");
@fontAwesomeTtfPath: asset-url("fontawesome-webfont.ttf");
@fontAwesomeSvgPath: asset-url("fontawesome-webfont.svg#fontawesomeregular");

// Font Awesome
@import "fontawesome/font-awesome";

// Glyphicons
//@import "twitter/bootstrap/sprites.less";

// Your custom LESS stylesheets goes here
//
// Since bootstrap was imported above you have access to its mixins which
// you may use and inherit here
//
// If you'd like to override bootstrap's own variables, you can do so here as well
// See http://twitter.github.com/bootstrap/customize.html#variables for their names and documentation
//
// Example:
// @linkColor: #ff0000;

/************************************************************************************************
/* Critical force fixes for font rendering improvement on OSX Safari/Chrome */
/***********************************************************************************************/
h1,h2,h3,h4,h5,h6 {
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale !important;
}
a {
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale !important;
}
.btn {
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale !important;
}
em {
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale !important;
}
table td {
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale !important;
}

a {
  &:hover {
    text-decoration: none;
  }
}
/***********************************************************************************************/
/* LESS Variables */
/***********************************************************************************************/
// Bootstrap Changes
@sansFontFamily:  "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
@link-color: #F07957;
@link-color-hover: #132C3B;
@text-color: #6C6C6C;
@border-color: #E0E0E0;
@blockquote-color: #2894D8;
@header-main-color: #3694b7;
@light-bg-heading-one: #3B5568;
@light-bg-heading-two: #6694B4;
@dark-bg-heading-one: white;
@dark-bg-heading-two: #3694B7;
@popoverArrowColor: #3C4A4D;
@popoverArrowWidth: 7px;

// Custom colors
@theme-primary: #3FC3D8;
@button-primary : #F07957;
@button-secondary: #F07957;
@header-color: #3FC3D8;
@modal-body-color: #41464A;
@auth-form-color :#2D3134;
@theme-light-grey: #666969;
@theme-dark-grey: #58585a;
@theme-orange: #F59E33;

body {
  margin-top: 90px;
}

/***********************************************************************************************/
/* Color branding */
/***********************************************************************************************/
.color-bar {
  background: linear-gradient(to right, @theme-orange 0%, @theme-orange 33%,#BCBDC0 66%,@theme-dark-grey 100%);
  height: 3px;
}

.main-title {
  font-size: 5em;
  text-align: center;
  padding-top: 0.5em;
  font-family: lato;
  .icon-bar-chart {
    color: @theme-orange;
  }
}
.reports-index, .users-index {
  background: #F0F0F0;
}

/***********************************************************************************************/
/* Navbar */
/***********************************************************************************************/
.breadbar {
  margin-bottom: 30px;
  padding: 0;
  width: 60%;
  margin-left: 20%;
}
.navbar-inner {
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
  background: white;
  border-radius: 0;
  border: none;
  .logo {
    margin-left: 20px;
    color: #2c3e50;
    font-size: 24px;
    font-weight: 700;
    float: left;
    margin-bottom: 10px;
    margin-top: 10px;
    em {
      color: #7f8c8d;
      text-transform: uppercase;
      font-style: normal;
      font-weight: 900;
      font-size: 24px;
    }
  }
  .home-header {
    img {
      height: 50px;
      margin-top: 13px;
      border: 3px solid rgba(0, 0, 0, 0.1);
      float: left;
    }
    .welcome {
      display: inline-block;
      margin-left: 13px;
      margin-top: 8px;
      h5:nth-child(1) {
        margin-bottom: 0;
        font-size: 13px;
        font-weight: 700;
        color: #666969;
        em {
          font-style: normal;
          margin-left: 2px;
          font-weight: 900;
        }
      }
      h5:nth-child(2) {
        margin-top: 0;
        color: @theme-orange;
        text-transform: uppercase;
        font-size: 11px;
      }
    }
    .icon-cog {
      cursor: pointer;
      font-size: 15px;
      padding-left: 15px;
    }
    .icon-signout {
      color: #F07957;
    }
  }
}


/***********************************************************************************************/
/* Forms */
/***********************************************************************************************/
.form-inputs {
  label {
    display: none;
  }
  .sign-check {
    display: inherit;
  }
  #user_admin {
    display: none;
  }
}
.input-append input, .input-prepend input, .input-append select, .input-prepend select, .input-append .uneditable-input, .input-prepend .uneditable-input {
  padding: 14px;
  border-radius: 0;
}
.input-prepend .add-on:first-child, .input-prepend .btn:first-child {
  border-radius: 0;
  background: white;
  color: #BEC3C7;
  padding: 14px;
  font-size: 19px;
}

button.btn, input[type="submit"].btn {
  background: #111111;
  color: white;
  text-shadow: none;
  font-weight: 700;
  padding: 10px 118px;
  font-size: 12px;
  font-family: lato;
  border: none;
  text-transform: uppercase;
  margin-top: 10px;
  border-radius: 0;
}

.auth-form {
  text-align: center;
}

.sign-in-form {
  text-align: center;
  font-family: lato;
  color: #384450;
  h1 {
    padding-top: 0;
  }
  h3 {
    padding-bottom: 1em;
  }
}

.home-btn {
  background: white;
  padding: 10px 30px;
  color: #40464A;
  &:hover {
    background: #40464A;
  }
}
.action-btn-left {
  padding: 10px 20px;
  background: #C93D2A;
  font-weight: 700;
  border-radius: 5px 0 0 5px;
  float: right;
  margin-top: 10px;
  color: white !important;
  i {
    padding-right: 4px;
  }
}
.action-btn-right {
  padding: 10px 20px;
  background: #E6614F;
  font-weight: 700;
  border-radius: 0 5px 5px 0;
  float: right;
  margin-top: 10px;
  color: white !important;
  i {
    padding-right: 4px;
  }
}
.action-report,.action-invite,.action-upload {
  padding: 7px 8px;
  font-size: 10px;
  border-radius: 3px;
  color: white !important;
  text-transform: uppercase;
  font-weight: 700;
  margin-right: 15px;
  i {
    padding-right: 4px;
  }
}
.action-report {
  background: #9b59b6;
}
.action-upload {
  background: #2980b9;
}
.action-invite {
  background: #34495e;
}
.icons {
  float: left;
}
.user-actions {
  float: right;
}
/***********************************************************************************************/
/* Flash Notifications */
/***********************************************************************************************/
.alert {
  padding: 10px 0;
  border-radius: 0px;
  text-align: center;
  i {
    position: relative;
    top: 3px;
    color: #58C14A;
    font-size: 20px;
    padding-right: 7px;
  }
  em {
    position: relative;
  }
  .close {
    display: none;
  }
}

.alert-danger, .alert-error, .alert-success {
  font-weight: 700;
  font-size: 15px;
  background-color: white;
}

.reports-index {
  .alert {
    position: absolute;
    top: 85px;
    width: 99.8%;
    left: 0;
  }
}

/***********************************************************************************************/
/* Footer */
/***********************************************************************************************/
.footer {
  padding: 15px 0;
  background: #111111;
  width: 100%;
  position: fixed;
  bottom: 0;
  .copyright {
    margin-left: 42px;
    color: #f8f8f8;
    font-size: 11px;
  }
}

/***********************************************************************************************/
/* Cards */
/***********************************************************************************************/
.client-cards {
  background: white;
  margin-top: 30px;
  border-radius: 10px;
  border-bottom: 2px solid #DCDCDC;
  border-right: 2px solid #DCDCDC;

  h2 {
    font-size: 24px;
    margin-left: 20px;
    color: #242529;
    margin-bottom: 3px;
    .icon-edit {
      color: #111111;
      float: right;
      margin-right: 8px;
      font-size: 20px;
      margin-top: 12px;
    }
    .icon-remove {
      color: #F07957;
      float: right;
      margin-right: 15px;
      font-size: 20px;
      margin-top: 12px;
    }
  }
  p {
    margin: 0 0 10px;
    margin-left: 20px;
    color: #979797;
    font-weight: 400;
    margin-bottom: 30px;
  }
  .client-logo {
    width: 100px;
    height: 100px;
    float: right;
    border: 3px solid rgba(0, 0, 0, 0.1);
  }
  .client-operations {
    border-right: 2px solid #DCDCDC;
    border-radius: 0 0 10px 10px;
    border-top: 1px solid rgba(0,0,0,0.1);
    padding: 10px 0px;
    .icons {
      margin-left: 20px;
      span {
        a {
          i {
            color: #3E4347;
            font-size: 14px;
            margin-right: 10px;
          }
        }
      }
    }
  }
}

/***********************************************************************************************/
/* Table */
/***********************************************************************************************/
.client-table {
  box-shadow: 0 1px 10px rgba(0,0,0,.1);
  width: 60%;
  margin-left: 20%;
  tr {
    background: white;
  }
  thead {
    th {
      padding: 20px 20px;
      font-size: 18px;
      font-weight: 900;
    }
  }
  tbody {
    tr {
      td {
        padding: 20px 20px;
        border: none;
        &:nth-child(1) {
          font-weight: 700;
          font-size: 16px;
        }
      }
      .icon-remove {
        color: #F07957;
        font-size: 16px;
      }
      .icon-edit {
        color: #40464A;
        position: relative;
        top: 1px;
        margin-right: 7px;
        font-size: 15px;
      }
      .icon-unlock {
        color: #40464A;
        font-size: 15px;
        margin-right: 12px;
      }
    }
    > tr:nth-child(odd) > td, > tr:nth-child(odd) > th {
      background: #F7F7F7;
    }
  }
}

.pagination-container {
  width: 60%;
  margin-left: 20%;
  padding-left: 0;
  .pagination {
    float: right;
  }
}

